# CS-E4780-project2

./: README.md  baseline_graph_rag.py  evaluate.py  evaluation_dataset.py  exemplars.py  get_baseline_results.py  graph_rag.py  graph_rag_results_BigGraphRAGCache_20.jsonl  graph_rag_results_BigGraphRAGCache_50.jsonl  graph_rag_results_BigGraphRAG_10.jsonl  graph_rag_results_BigGraphRAG_20.jsonl  graph_rag_results_BigGraphRAG_30.jsonl  graph_rag_results_BigGraphRAG_40.jsonl  graph_rag_results_BigGraphRAG_50.jsonl  main.py  pyproject.toml  queries.txt  queries_cache_test.txt  run.sh  visualization.ipynb  workflow.py
