[project]
name = "marimo-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.1",
    "jupyter>=1.1.1",
    "kuzu>=0.11.1",
    "marimo>=0.14.17",
    "pandas>=2.3.3",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
]
